--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-    <link href="%PUBLIC_URL%%PUBLIC_URL%/static/css/gozha-nav.css" rel="stylesheet" />
-    <link href="%PUBLIC_URL%%PUBLIC_URL%/static/css/external/jquery.selectbox.css" rel="stylesheet" />
-    <link href="%PUBLIC_URL%%PUBLIC_URL%/static/css/style.css" rel="stylesheet" />
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/js/external/modernizr.custom.js"></script>
+    <link href="%PUBLIC_URL%/static/css/gozha-nav.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/static/css/external/jquery.selectbox.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/static/css/style.css" rel="stylesheet" />
+    <script src="%PUBLIC_URL%/static/js/external/modernizr.custom.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -56,30 +56,30 @@
 
         if (window.location.href.includes('/admin')) {
             window.document.title = 'Admin | Dashboard'
-            includeCSS("http://localhost:3000/static/plugins/fontawesome-free/css/all.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/fontawesome-free/css/all.min.css");
             includeCSS("https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
-            includeCSS("http://localhost:3000/static/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css");
-            includeCSS("http://localhost:3000/static/plugins/icheck-bootstrap/icheck-bootstrap.min.css");
-            includeCSS("http://localhost:3000/static/plugins/jqvmap/jqvmap.min.css");
-            includeCSS("http://localhost:3000/static/dist/css/adminlte.min.css");
-            includeCSS("http://localhost:3000/static/plugins/overlayScrollbars/css/OverlayScrollbars.min.css");
-            includeCSS("http://localhost:3000/static/plugins/daterangepicker/daterangepicker.css");
-            includeCSS("http://localhost:3000/static/plugins/summernote/summernote-bs4.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/icheck-bootstrap/icheck-bootstrap.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/jqvmap/jqvmap.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/dist/css/adminlte.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/overlayScrollbars/css/OverlayScrollbars.min.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/daterangepicker/daterangepicker.css");
+            includeCSS("https://movie-booking-sooty.vercel.app/static/plugins/summernote/summernote-bs4.css");
             includeCSS("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700");
 
-            includeJS('http://localhost:3000/static/plugins/jquery/jquery.min.js');
+            includeJS('https://movie-booking-sooty.vercel.app/static/plugins/jquery/jquery.min.js');
 
         }
         else {
             window.document.title = 'CGV Cinema'
             includeCSS('http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css');
             includeCSS('http://fonts.googleapis.com/css?family=Roboto:400,700');
-            includeCSS('http://localhost:3000/static/css/gozha-nav.css');
-            includeCSS('http://localhost:3000/static/css/external/jquery.selectbox.css');
-            includeCSS('http://localhost:3000/static/css/style.css');
+            includeCSS('https://movie-booking-sooty.vercel.app/static/css/gozha-nav.css');
+            includeCSS('https://movie-booking-sooty.vercel.app/static/css/external/jquery.selectbox.css');
+            includeCSS('https://movie-booking-sooty.vercel.app/static/css/style.css');
             includeCSS('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css');
 
-            includeJS('http://localhost:3000/static/js/external/modernizr.custom.js');
+            includeJS('https://movie-booking-sooty.vercel.app/static/js/external/modernizr.custom.js');
             includeJS('https://code.jquery.com/jquery-3.5.1.min.js');
             includeJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js');
             includeJS('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js');
@@ -123,38 +123,38 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- ChartJS -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/chart.js/Chart.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/chart.js/Chart.min.js"></script>
     <!-- Sparkline -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/sparklines/sparkline.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/sparklines/sparkline.js"></script>
     <!-- JQVMap -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
     <!-- jQuery Knob Chart -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/jquery-knob/jquery.knob.min.js"></script>
     <!-- daterangepicker -->
     <script src="%PUBLIC_URL%/static/plugins/moment/moment.min.js"></script>
     <script src="%PUBLIC_URL%/static/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- Tempusdominus Bootstrap 4 -->
     <script
-        src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+        src="%PUBLIC_URL%/static/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Summernote -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/summernote/summernote-bs4.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/summernote/summernote-bs4.min.js"></script>
     <!-- overlayScrollbars -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="%PUBLIC_URL%/static/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/dist/js/adminlte.js"></script>
+    <script src="%PUBLIC_URL%/static/dist/js/adminlte.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/dist/js/pages/dashboard.js"></script>
+    <script src="%PUBLIC_URL%/static/dist/js/pages/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="%PUBLIC_URL%%PUBLIC_URL%/static/dist/js/demo.js"></script>
+    <script src="%PUBLIC_URL%/static/dist/js/demo.js"></script>
 </body>
 
 </html>
